Skip GError out parameters in Python closure.

Python code should have never have to explicitely return a GError.
Once we are able to marshal exceptions the Python code should
throw an exception instead. Until then, set GError to NULL, and
don't complain if a Python function doesn't return an arg for it.

https://bugzilla.gnome.org/show_bug.cgi?id=642715